Тесты и мелкие фиксы
